Changed users endpoint to credentials
